<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#222">

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/icon_favorit"
            android:tint="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.958"
            app:layout_constraintStart_toEndOf="@+id/show_from"
            app:layout_constraintTop_toTopOf="@+id/show_name"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_favorite_border" />

        <ImageView
            android:id="@+id/img_show_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/show_img_detail"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_aquaman"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:contentDescription="@string/content_aquaman"
            android:scaleType="fitXY"
            android:src="@drawable/poster_aquaman"
            app:layout_collapseMode="parallax"
            app:layout_constraintBottom_toTopOf="@+id/show_from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.721" />

        <TextView
            android:id="@+id/show_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/yellow_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_show_photo" />

        <TextView
            android:id="@+id/show_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_name"
            android:text="@string/show_from"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/yellow_900"
            app:fontFamily="sans-serif-medium"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_from" />

        <TextView
            android:id="@+id/show_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/spacing_small"
            android:text="@string/content_aquaman"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/original_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/yellow_900"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/show_language"
            app:layout_constraintEnd_toStartOf="@+id/show_language"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/show_language"
            app:layout_constraintTop_toBottomOf="@+id/show_content" />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/original_language"
            android:layout_marginTop="25dp"
            android:text="@string/runtime"
            android:textColor="@color/yellow_900"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/show_runtime"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.431"
            app:layout_constraintStart_toStartOf="@+id/show_runtime"
            app:layout_constraintTop_toBottomOf="@+id/original_language"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/runtime"
            android:layout_marginTop="25dp"
            android:text="@string/type"
            android:textColor="@color/yellow_900"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/show_budget"
            app:layout_constraintTop_toBottomOf="@+id/runtime" />

        <TextView
            android:id="@+id/revenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/budget"
            android:layout_marginTop="25dp"
            android:text="@string/Genre"
            android:textColor="@color/yellow_900"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/show_revenue"
            app:layout_constraintTop_toBottomOf="@+id/budget" />

        <TextView
            android:id="@+id/show_language"
            android:layout_width="156dp"
            android:layout_height="16dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="25dp"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/original_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_show_photo"
            tools:text="Language" />

        <TextView
            android:id="@+id/show_runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_language"
            android:layout_marginStart="250dp"
            android:layout_marginTop="25dp"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_language"
            app:layout_constraintVertical_bias="0.0"
            tools:text="000 mins" />

        <TextView
            android:id="@+id/show_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_runtime"
            android:layout_marginStart="250dp"
            android:layout_marginTop="25dp"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_runtime"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Scripted" />

        <TextView
            android:id="@+id/show_revenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_budget"
            android:layout_marginStart="250dp"
            android:layout_marginTop="25dp"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_budget"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Comedy" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_favorite"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>